# holohub

applications/aja_video_capture/: README.md
applications/aja_video_capture/python/: CMakeLists.txt  aja_capture_external_overlay.py  aja_capture_external_overlay.yaml  aja_capture_overlay.py  aja_capture_overlay.yaml  metadata.json
applications/gstreamer/gst_video_recorder/: README.md
applications/gstreamer/gst_video_recorder/cpp/: CMakeLists.txt  metadata.json
applications/gstreamer/gst_video_recorder/python/: CMakeLists.txt  gst_video_recorder.py  metadata.json
operators/aja_source/: README.md  aja_source.cpp
operators/gstreamer/python/: CMakeLists.txt  gst_video_recorder_op.cpp  gst_video_recorder_op_pydoc.hpp
operators/holoscan_ros2/python/holoscan_ros2/: bridge.py
operators/tensor_to_video_buffer/: tensor_to_video_buffer.cpp
